<resources>
    <string name="app_name">Job List</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
</resources>
