<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
     android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        app:srcCompat="@drawable/jobpotal" />

    <EditText
         android:id="@+id/edittext_username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/ic_person"
        android:textStyle="bold"
        android:hint="@string/username"
        tools:ignore="RtlHardcoded" />



    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#1f18a6"
        android:textColor="#ffffff"
        android:text="@string/Login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
             android:textColor="#ffffff"
             android:text="@string/not_registered"
            />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>