<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        app:srcCompat="@drawable/jobpotal" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/username"
         />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
         />

    <EditText
        android:id="@+id/edittext_cmf_username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/confirm_password"

           />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#1f18a6"
        android:text="Singup"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:padding="10dp"
            android:text="login"
            android:textColor="#ffffff"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>